--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/material": "^5.14.3",
     "json-2-csv": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
