--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "json-2-csv": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
