--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "@mui/styles": "^5.14.14",
+    "axios": "^1.5.1",
     "json-2-csv": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
