--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.14.3",
     "@mui/styles": "^5.14.14",
     "axios": "^1.5.1",
+    "js-cookie": "^3.0.5",
     "json-2-csv": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +26,7 @@
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
