--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,8 @@ jobs:
         uses: actions/setup-node@v3
 
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+        run: npm install --legacy-peer-deps
+        # uses: bahmutov/npm-install@v1
 
       - name: Build project
         run: npm run build
