--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@floating-ui/react-dom": "^2.0.2",
     "@fontsource/roboto": "^5.0.7",
     "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.3",
+    "@mui/material": "^5.14.14",
     "@mui/styles": "^5.14.14",
     "axios": "^1.5.1",
     "js-cookie": "^3.0.5",
     "json-2-csv": "^4.1.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
     "react-router-dom": "^6.17.0",
     "socket.io-client": "^4.7.2"
   },
