--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.14",
     "@mui/styles": "^5.14.14",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.5.1",
     "js-cookie": "^3.0.5",
     "json-2-csv": "^4.1.0",
