feat: Added state management to handle shared states between components and functions
- The logic is separated from the body page component
- Created custome hook to handle the logic and update the states needs
- Used state management to handle several states shared between different files
- Created new types as needed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
@@ -22,11 +23,12 @@
   },
   "include": [
     "src",
-    "pages/Home/Body.tsx",
-    "pages/Home/CircularProgressWithLabel.tsx",
-    "pages/Home/index.tsx",
-    "pages/Home/User.tsx",
-    "pages/Login"
+    "src/pages/Home/Body.tsx",
+    "src/pages/Home/CircularProgressWithLabel.tsx",
+    "src/pages/Home/index.tsx",
+    "src/pages/Home/User.tsx",
+    "src/pages/Login",
+    "src/redux"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
