--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "json-2-csv": "^4.1.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.17.0",
     "socket.io-client": "^4.7.2"
   },
