--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,6 +4,7 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
+    "jsx": "react",
     "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts"]
