--- a/package.json
+++ b/package.json
@@ -11,35 +11,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@floating-ui/react-dom": "^2.0.2",
-    "@fontsource/roboto": "^5.0.7",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.14",
-    "@mui/styles": "^5.14.14",
-    "@reduxjs/toolkit": "^2.2.1",
-    "axios": "^1.5.1",
+    "@babel/core": "^7.24.4",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@floating-ui/react-dom": "^2.0.8",
+    "@fontsource/roboto": "^5.0.12",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
-    "json-2-csv": "^4.1.0",
-    "react": "^18.0.2",
-    "react-dom": "^18.0.2",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.17.0",
-    "socket.io-client": "^4.7.2"
+    "json-2-csv": "^5.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.22.3",
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.5",
-    "@types/node": "^20.8.7",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^9.0.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.9"
   }
 }
