--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@floating-ui/react-dom": "^2.0.8",
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.15",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
