--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
