--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "json-2-csv": "^5.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-joyride": "^2.8.2",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "redux-persist": "^6.0.0",
