--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://icog-labs-dev.github.io/DAOMatcher",
+  "homepage": "https://daomatcher.vercel.app",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
